# ai-quant-trader

./: .gitignore  README.md  backtest.bat  ideate.bat  optimize.bat  pyproject.toml  requirements.txt  run_all.bat  setup.bat  trade.bat
config/: default.yaml
examples/: momentum_breakout.py  sample_strategy.py
src/: __init__.py  main.py
src/backtest/: __init__.py  engine.py  interpreter.py  metrics.py
src/data/: __init__.py  loader.py  universe.py
src/execution/: __init__.py  broker.py  risk.py
src/ideation/: __init__.py  generator.py
src/llm/: __init__.py  client.py  prompts.py
src/reporting/: report.py
src/treesearch/: __init__.py  agent_manager.py  journal.py  node.py  parallel_agent.py
tests/: test_backtest.py  test_metrics.py
