[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-quant-trader"
version = "0.1.0"
description = "AI-Scientist-v2 기반 자율 퀀트 트레이딩 시스템"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "yfinance>=0.2.40",
    "pykrx>=1.0.45",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "omegaconf>=2.3.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "backoff>=2.2.1",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
ai-quant = "src.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
